Fixed delete category 'x' not showing up, added a couple of checks for various category methods, cleaned up margins

--- a/src/app/modules/cerf/cerf.component.css
+++ b/src/app/modules/cerf/cerf.component.css
@@ -185,20 +185,26 @@ h1 {
 	display: flex;
 	flex-flow: row wrap;
 }
-
+.categoryWrapper {
+	position: relative;
+	display: inline-block;
+}
 .categoryButton.activeCategory {
 	background-color: #00a5d9;
 	color: white;
 }
-
+.categoryButton {
+	margin-bottom: 10px;
+}
 .deleteCategory {
 	visibility: hidden;
 	position: absolute;
-	top: -25px;
-	right: -25px;
+	top: -7px;
+	right: 0;
 }
 .categoryButton:hover ~ .deleteCategory, .deleteCategory:hover {
 	visibility: visible;
+	cursor: pointer;
 }
 
 .full-width {	/* text area */
